Bug #39997: Logger::write_message() causes an assertion failure

Fixed by changing the error code from 0 to ER_UNKNOWN_ERROR.
Updated the offending call to use report_error (and hence the 
correct error code).